<?xml version="1.0" encoding="utf-8"?>
<resources>



    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="help">Help</string>
    <string name="get_premium">Get premium</string>
    <string name="user_name">Personalize your profile</string>
    <string name="sync_google_calendar">Sync with google calendar</string>


    <string name="event">Event</string>
    <string name="reminder">Reminder</string>
    <string name="alarm">Alarm</string>
    <string name="habit">Habit</string>
    <string name="todo">To-do</string>




    <string name="userKeyId" translatable="false"></string>
    <string name="voice_input" translatable="false"></string>
    <string name="about">About</string>
    <string name="speech_prompt">Say something</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="settings">Settings</string>
    <string name="preference_notification_category">Notification Preferences</string>
    <string name="checkbox_vibrate">Vibrate</string>
    <string name="checkbox_sound">Sound</string>
    <string name="checkbox_LED">LED</string>
    <string name="checkbox_ongoing">Persistent</string>
    <string name="ongoing_detail">Prevent notification from being swiped away</string>
    <string name="snooze">Snooze</string>
    <string name="snooze_detail">Add a snooze action to the notification</string>
    <string name="snooze_length">Snooze length</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_done_detail">Add a \"Mark as done\" action to the notification</string>
    <string name="nagging_reminder">Nagging reminder</string>
    <string name="nagging_detail">Continuously notify you of the current notification until it is dismissed</string>
    <string name="nagging_interval">Nagging interval</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_about">About</string>
    <string name="action_show_now">Show now</string>
    <string name="action_mark_as_done">Mark as done</string>
    <string name="action_share">Share</string>
    <string name="delete_confirmation">Are you sure you want to delete this notification?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="title">Title</string>
    <string name="save_menu">Save</string>
    <string name="time_now">Now</string>
    <string name="date_today">Today</string>
    <string name="times_shown">Shown %1$d out of %2$d times</string>
    <string name="times_shown_edit">Shown %1$d out of</string>
    <string name="forever">Forever</string>
    <string name="no_repeat">Does not repeat</string>
    <string name="times">times</string>
    <string name="repeat_notification">Number of times to repeat: </string>
    <string name="content_hint">Add notification content</string>
    <string name="select_icon">Select an icon</string>
    <string name="default_icon">Default icon</string>
    <string name="custom_icon">Custom icon</string>
    <string name="select_colour">Select a colour</string>
    <string name="default_colour">Default colour</string>
    <string name="repeats_on">Repeats on:</string>
    <string name="repeat_every">Repeat every</string>
    <string name="repeats_every">Repeats every: %1$d %2$s</string>
    <string name="no_active">No active notifications</string>
    <string name="no_inactive">No inactive notifications</string>
    <string name="toast_past_date">Cannot set initial date in the past</string>
    <string name="toast_higher_number">Repeat number must be higher</string>
    <string name="toast_title_empty">Title cannot be empty</string>
    <string name="toast_mark_as_done">Marked next reminder as done</string>
    <string name="add_reminder">Add reminder</string>
    <string name="libraries">Libraries</string>
    <string name="rate_app">Rate app</string>
    <string name="contact">Contact</string>
    <string name="version">Version</string>
    <string name="thanks_to">Thanks to</string>
    <string name="translator">Translator</string>
    <string name="send_email">Send email</string>
    <string-array name="repeat_array">
        <item>Does not repeat</item>
        <item>Every hour</item>
        <item>Every day</item>
        <item>Every week</item>
        <item>Every month</item>
        <item>Every year</item>
        <item>Specific days of the week</item>
        <item>Advanced</item>
    </string-array>
    <string name="title_activity_reminder">ReminderActivity</string>
    <string name="Apprequires">"This app requires Google Play Services. Please install "</string>
    <string name="GPSandrelaunch">Google Play Services on your device and relaunch this app.</string>
    <string name="home">home</string>
    <string name="textInput">text</string>
    <string name="voiceInputItem">voice</string>
    <string name="interfaceInput">button</string>
    <string name="sync">Sync with messenger</string>


</resources>