<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menus"
    >


    <item android:id="@+id/sync1"
        android:title="@string/sync"
        android:orderInCategory="100"
        android:icon="@drawable/ic_sync_white_24dp"
        app:showAsAction="never" />

    <item android:id="@+id/sync2"
        android:title="@string/sync_google_calendar"
        android:orderInCategory="100"
        android:icon="@drawable/ic_sync_white_24dp"
        app:showAsAction="never" />

    <item android:id="@+id/premium"
        android:title="@string/get_premium"
        android:orderInCategory="100"
        android:icon="@drawable/ic_stars_white_24dp"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_settings_white_24dp"
        app:showAsAction="never" />

    <item android:id="@+id/help"
        android:title="@string/help"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>